fix: adjust community height on mobile to fit within tab

--- a/src/pages/community/community.scss
+++ b/src/pages/community/community.scss
@@ -11,8 +11,8 @@
     position: relative;
 
     @include mobile-or-tablet-screen {
-        height: calc(90vh - 120px);
-        max-height: calc(90vh - 120px);
+        height: 780px;
+        max-height: 100%;
     }
 
     // Mobile Menu Toggle Button
